cmake_minimum_required(VERSION 3.28)
project(midtern_review)

set(CMAKE_CXX_STANDARD 17)

add_executable(main main.cpp)
add_executable(loop loop.cpp)
add_executable(selection selection.cpp)
add_executable(function function.cpp)
add_executable(reference reference.cpp)
add_executable(pointer pointer.cpp)
add_executable(array array.cpp)
add_executable(encapsulation Encapsulation.cpp)
add_executable(template_class template_class.cpp)